--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.datasource.url=jdbc:mysql://cs5200-spring2020-hartenstine.cbavrek9hg5h.us-east-1.rds.amazonaws.com:3306/cs5200_spring2020_hartenstine_final_project
 spring.datasource.username=hvharten
 spring.datasource.password=^zdFTd^B6gd!8v
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 spring.datasource.tomcat.test-while-idle=true
 spring.datasource.tomcat.validation-query=SELECT 1
+
